--- a/per7.html
+++ b/per7.html
@@ -25,7 +25,7 @@ btn #minus1 { background-color: #ffefff; }
 
 
 <body ng-app="myApp" ng-controller="todoCtrl">
-<div class="container">
+<div class="container-fluid">
 <h2>Student Check List</h2>
 
 <form ng-submit="todoAdd()">
