--- a/per7.html
+++ b/per7.html
@@ -4,6 +4,7 @@
 #count1 {width: 2em; margin: .25em; padding: .5em;}
 
 td {padding-right: 10em;}
+span {font-size: 22px;}
 
 btn.#plus1 { background-color: #efffcf; }
 btn #minus1 { background-color: #ffefff; }
@@ -37,14 +38,60 @@ btn #minus1 { background-color: #ffefff; }
 <tr ng-repeat="x in todoList" ng-class-odd="'odd'" ng-class-even="'even'">
 <td>
     <input type="checkbox" ng-model="x.done"> 
-    <span ng-bind="x.todoText"></span>
-    <span ng-bind="x.Last"></span>
+    <span ng-bind="x.todoText"></span><!-- Firstname-->
+    <span ng-bind="x.Last"></span><!-- Lastname-->
 </td>
 <td>
     <button id="plus1" class="btn btn-primary" ng-click="count = count + 1">+</button>
     <input id="count1" type="text" ng-model="count" placeholder="0">
     <button id="minus1" class="btn btn-info" ng-click="count = count - 1">-</button>
 </td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+<td>
+&nbsp;
+</td>
+
 </tr>
 </div><!-- ng-repeat -->
 </table>
