--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<div class="item active" style="background-image: url(img/banner.png);">
 						<div class="carousel-caption">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Meet<span> Mr. B.</span>!</h2>
-							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">/creative</span> one page.</h3>
+							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">Creative</span> web pages.</h3>
 							<p data-wow-duration="1000ms" class="wow slideInRight animated">We are a team of professionals</p>
 							
 							<ul class="social-links text-center">
