--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
 						<div class="member-thumb">
 							<img src="img/team/member-1.png" alt="Team Member" class="img-responsive">
 							<figcaption class="overlay">
-								<h5>voluptatem quia voluptas </h5>
-								<p>sit aspernatur aut odit aut fugit,</p>
+								<h5>Click </h5>
+								<p>for contact</p>
 								<ul class="social-links text-center">
 									<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
 									<li><a href=""><i class="fa fa-facebook fa-lg"></i></a></li>
