--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 							</figcaption>
 						</div>
 						<h4>Mr. B.</h4>
-						<span>Managing Director</span>
+						<span>The Dad</span>
 					</figure>
 					<!-- end single member -->
 					
