--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							
 							<div class="service-desc">
 								<h3>Mr. B.</h3>
-								<p>As an instructor at the high school, middle school, and college level, I have taught web design to hundreds (maybe thousands) of students.</p>
+								<p>As an instructor in a career center, high school, middle school, and college level, I have taught web design and programming to hundreds of students.</p>
 							</div>
 						</div>
 					</div>
