--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<div class="carousel-inner" role="listbox">
 					
 					<!-- single slide -->
-					<div class="item active" style="background-image: url(img/banner.png);">
+					<div class="item active" style="background-image: url(img/banner_shopping.png);">
 						<div class="carousel-caption">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Meet<span> Mr. B.</span>!</h2>
 							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">Creative</span> web pages.</h3>
