--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						<div class="carousel-caption">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Meet<span> Mr. B.</span>!</h2>
 							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">Creative</span> web pages.</h3>
-							<p data-wow-duration="1000ms" class="wow slideInRight animated">We are a team of professionals</p>
+							<p data-wow-duration="1000ms" class="wow slideInRight animated">Web Application Developer</p>
 							
 							<ul class="social-links text-center">
 								<li><a href=""><i class="fa fa-twitter fa-lg"></i></a></li>
