--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 							
 							<div class="service-desc">
 								<h3>Development</h3>
-								<p>Using popular industry and freely available tools, students create web pages that look great and use the latest industry standards.  </p>
+								<p>Prior to teaching and throughout teaching I have continued to learn and practice my coding skills.  Helping students do the same.</p>
 							</div>
 						</div>
 					</div>
@@ -203,8 +203,8 @@
 							</div>
 							
 							<div class="service-desc">
-								<h3>Consulting</h3>
-								<p>While still in school, many of my students have the necessary skills to consult with you to create your web page needs.</p>
+								<h3>Teaching</h3>
+								<p>While still in school, many of my students have the necessary skills to be productive coders.</p>
 							</div>
 						</div>
 					</div>
