--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
 			<div class="project-wrapper">
 			
 				<figure class="mix work-item Mr. B.">
-					<img src="img/works/item-1.jpg" alt="">
+					<img src="img/works/bpa_reservation_capture.PNG" alt="">
 					<figcaption class="overlay">
-						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/item-1.jpg"><i class="fa fa-eye fa-lg"></i></a>
+						<a class="fancybox" rel="works" title="Write Your Image Caption Here" href="img/works/bpa_reservation_capture.PNG"><i class="fa fa-eye fa-lg"></i></a>
 						<h4>Labore et dolore magnam</h4>
 						<p>Photography</p>
 					</figcaption>
