--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ r<!DOCTYPE html>
 				<div class="carousel-inner" role="listbox">
 					
 					<!-- single slide -->
-					<div class="item active" style="background-image: url(img/banner_city.jpg);">
+					<div class="item active" style="background-image: url(img/banner_city999.jpg);">
 						<div class="carousel-caption">
 							<h2 data-wow-duration="700ms" data-wow-delay="500ms" class="wow bounceInDown animated">Meet<span> Mr. B.</span>!</h2>
 							<h3 data-wow-duration="1000ms" class="wow slideInLeft animated"><span class="color">Creative</span> web pages.</h3>
@@ -126,7 +126,7 @@ r<!DOCTYPE html>
 					<!-- end single slide -->
 					
 					<!-- single slide -->
-					<div class="item" style="background-image: url(img/banner_beach.jpg);">
+					<div class="item" style="background-image: url(img/banner_beach999.jpg);">
 						<div class="carousel-caption">
 							<h2 data-wow-duration="500ms" data-wow-delay="500ms" class="wow bounceInDown animated">Meet our<span> Team</span>!</h2>
 							<h3 data-wow-duration="500ms" class="wow slideInLeft animated"><span class="color">/Creative</span> web pages.</h3>
