--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ r<!DOCTYPE html>
 			<div class="container">
 				<div class="row">
 			
-				<figure class="mix work-item">
+				<figure class="mix work-item  text-center">
 					<img src="img/works/bpa_reservation_capture.PNG" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="Reservation System" href="img/works/bpa_reservation_capture.PNG"><i class="fa fa-eye fa-lg"></i></a>
@@ -242,11 +242,11 @@ r<!DOCTYPE html>
 					</figcaption>
 				</figure>
 				
-				<figure class="mix work-item web">
+				<figure class="mix work-item web  text-center">
 					<img src="img/works/item-2.jpg" alt="">
 					<figcaption class="overlay">
 						<a class="fancybox" rel="works" title="Shopping Cart" href="img/works/item-2.jpg"><i class="fa fa-eye fa-lg"></i></a>
-						<h4>Shopping Cart/h4>
+						<h4>Shopping Cart</h4>
 						<p>NodeJS data driven website</p>
 					</figcaption>
 				</figure>
