--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ r<!DOCTYPE html>
 							
 							<div class="service-desc">
 								<h3>Mr. B.</h3>
-								<p>As an instructor in a career center, high school, middle school, and college level, I have taught web design and programming to hundreds of students.</p>
+								<p>As an instructor in a career center, high school, middle school, and at the college level, I have taught web design and programming to hundreds of students.</p>
 							</div>
 						</div>
 					</div>
